# Qt_Notes

./: CMakeLists.txt
src/: CMakeLists.txt
src/xiaodoujun/: CMakeLists.txt
src/xiaodoujun/ch01/: CMakeLists.txt
src/xiaodoujun/ch01/1_3MyFirstWidget/: CMakeLists.txt
src/xiaodoujun/ch01/1_3MyFirstWidget/include/: myfirstwidget.h
src/xiaodoujun/ch01/1_3MyFirstWidget/src/: main.cpp  myfirstwidget.cpp  myfirstwidget.ui
